# alc_fact

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_code.md
CI-tests/: test1.tar  test10.tar  test11.tar  test12.tar  test13.tar  test14.tar  test15.tar  test16.tar  test17.tar  test18.tar  test19.tar  test2.tar  test20.tar  test21.tar  test22.tar  test23.tar  test24.tar  test25.tar  test26.tar  test27.tar  test28.tar  test29.tar  test3.tar  test4.tar  test5.tar  test6.tar  test7.tar  test8.tar  test9.tar
examples/MSD_H2O/: MSD_data  SETTINGS
examples/OCF_H2O/: OCF_30ps  SETTINGS
examples/OCF_H3O+/: OCF_10ps  SETTINGS
examples/SPCF_H3O+/: SETTINGS  SPCF_15ps
examples/TCF_H3O+/: SETTINGS  TCF_15ps
scripts/: SETTINGS_template  clean_data.sh
source/: alc_fact.F90  constants.F90  fileset.F90  fitting.F90  fitting_checks.F90  fitting_setup.F90  gnuplot_setup.F90  input_settings.F90  input_types.F90  models.F90  numprec.F90  process_data.F90  unit_output.F90
tools/: launch-test.sh
